# Credit-Risk-Prediction

./: .gitignore  Makefile  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
credit_risk_prediction/: app.py  predict.py  streamlit_app.py  train.py
docker/: Dockerfile.app  docker-compose.yml
models/: xgb_model.joblib
notebooks/: 1-IL-initial-exploration.ipynb  2-IL-final-model-preparation.ipynb  submission.csv
