[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "credit_risk_prediction"
version = "0.0.1"
description = "Project for predicting credit risk"
authors = [
  { name = "Ivan Lewkowicz" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "black",
    "flake8",
    "flask>=3.1.2",
    "ipykernel>=7.1.0",
    "isort",
    "joblib>=1.5.2",
    "jupyter>=1.1.1",
    "mabwiser>=2.7.4",
    "mlflow>=3.5.1",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pip",
    "plotly>=6.4.0",
    "pre-commit>=4.3.0",
    "python-dotenv",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "streamlit>=1.51.0",
    "tabulate>=0.9.0",
    "uvicorn>=0.38.0",
    "xgboost==3.0.3",
    "xlrd>=2.0.2",
]
requires-python = "~=3.10.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["credit_risk_prediction"]
force_sort_within_sections = true


